Fixing a visual bug on small screens.

--- a/source/assets/share-icons.css
+++ b/source/assets/share-icons.css
@@ -8,6 +8,10 @@ ul.share-buttons li{
   display: inline;
 }
 
+ul.share-buttons img{
+  width: initial;
+}
+
 ul.share-buttons .sr-only{
   position: absolute;
   clip: rect(1px 1px 1px 1px);
